# hiclaw-py

./: .env.example  .gitignore  COURSE_GUIDE.md  MEMORY.md  README.md  pyproject.toml
.github/workflows/: pages.yml
capabilities/workflows/: workflow_create_skill_with_preview.json  workflow_update_skill_with_preview.json
docs/: bash-tool-cross-platform-spec.md  capability-definition-spec.md  multi-agent-spec.md  tool-system-architecture.md
pixel-office-core/: README.md  hiclaw-dashboard.html  hiclaw-dashboard.js  package-lock.json  package.json  preview.html  tsconfig.json
pixel-office-core/examples/: basic.html
pixel-office-core/src/: browserAssetLoader.ts  bubbleData.ts  characters.ts  colorUtils.ts  colorize.ts  commandBridge.ts  constants.ts  floorTiles.ts  furnitureCatalog.ts  gameLoop.ts  index.ts  layout.ts  officeState.ts  pixelOffice.ts  renderer.ts  spriteCache.ts  spriteData.ts  tileMap.ts  types.ts  wallTiles.ts
scripts/: check_text_encoding.py  dev-core-dashboard.ps1  install.ps1  install.sh  start.sh  stop.sh  uninstall.ps1  uninstall.sh
site/: index.html  script.js  styles.css
skills/: automation_skill.md  table_analysis_skill.md
skills/knowledge_builder/: README.md  knowledge_builder.md
skills/knowledge_query_router/: knowledge_query_router.md
src/garveyclaw/: claude_client.py  config.py  media_store.py  skill_store.py  speech_client.py  telegram_bot.py
src/hiclaw/: __init__.py  __main__.py  agent_client.py  app.py  (+16 more)
tests/: test_claude_config.py  test_memory_governance.py  test_task_natural_schedule.py  test_tool_auto_approval.py
(+69 files in other folders)
