[project]
name = "hiclaw-py"
version = "0.1.0"
description = "Personal AI Agent with Claude Code SDK and Telegram"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.10,<4.0",
    "claude-agent-sdk>=0.1.31",
    "croniter>=6.0.0",
    "lark-oapi>=1.4.0",
    "openai>=2.0.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "tavily-python>=0.7",
]

[project.optional-dependencies]
asr = [
    "vosk>=0.3.45",
]

[project.scripts]
hiclaw = "hiclaw.cli:main"
hiclaw-tui = "hiclaw.channels.tui:main"
hiclaw-feishu = "hiclaw.channels.feishu.bot:main"
hiclaw-dashboard = "hiclaw.monitor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/hiclaw",
    "src/hiclaw/agentspec",
    "src/hiclaw/agents",
    "src/hiclaw/capabilities",
    "src/hiclaw/channels",
    "src/hiclaw/channels/telegram",
    "src/hiclaw/channels/feishu",
    "src/hiclaw/core",
    "src/hiclaw/decision",
    "src/hiclaw/media",
    "src/hiclaw/memory",
    "src/hiclaw/monitor",
    "src/hiclaw/skills",
    "src/hiclaw/tasks",
]

[tool.ruff]
line-length = 180
